<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="416dp"
        android:layout_height="289dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/plus"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="PlusButton"
                android:text="@string/plus"
                android:textColor="@color/teal_700" />

            <Button
                android:id="@+id/minus"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="MinusButton"
                android:text="@string/minus"
                android:textColor="@color/teal_700" />

            <Button
                android:id="@+id/multiply"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:onClick="MultiplyButton"
                android:text="@string/multiply"
                android:textColor="@color/teal_700" />

            <Button
                android:id="@+id/divide"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="116dp"
                android:layout_height="wrap_content"
                android:onClick="DivideButton"
                android:text="@string/divide"
                android:textColor="@color/teal_700" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/one"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="OneButton"
                android:text="@string/one"
                android:textColor="@color/teal_700" />

            <Button
                android:id="@+id/two"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="TwoButton"
                android:text="@string/two"
                android:textColor="@color/teal_700" />

            <Button
                android:id="@+id/three"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="ThreeButton"
                android:text="@string/three"
                android:textColor="@color/teal_700" />

            <Button
                android:id="@+id/four"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="FourButton"
                android:text="@string/four"
                android:textColor="@color/teal_700" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/five"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="FiveButton"
                android:text="@string/five"
                android:textColor="@color/teal_700" />

            <Button
                android:id="@+id/six"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="SixButton"
                android:text="@string/six"
                android:textColor="@color/teal_700" />

            <Button
                android:id="@+id/seven"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="SevenButton"
                android:text="@string/seven"
                android:textColor="@color/teal_700" />

            <Button
                android:id="@+id/eight"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="EightButton"
                android:text="@string/eight"
                android:textColor="@color/teal_700" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/nine"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="NineButton"
                android:text="@string/nine"
                android:textColor="@color/teal_700" />

            <Button
                android:id="@+id/zero"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="ZeroButton"
                android:text="@string/zero"
                android:textColor="@color/teal_700" />

            <Button
                android:id="@+id/point"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="PointButton"
                android:text="@string/point"
                android:textColor="@color/teal_700" />

            <Button
                android:id="@+id/degree"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="DegreeButton"
                android:text="@string/degree"
                android:textColor="@color/teal_700" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/result"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="ResultButton"
                android:text="@string/result"
                android:textColor="@color/teal_700" />

            <Button
                android:id="@+id/backspace"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="111dp"
                android:layout_height="wrap_content"
                android:onClick="CleanButton"
                android:text="@string/backspace"
                android:textColor="@color/teal_700" />

        </TableRow>

    </TableLayout>

    <EditText
        android:id="@+id/textView"
        android:layout_width="417dp"
        android:layout_height="51dp"
        android:background="@android:drawable/editbox_background"
        android:text="@string/textView"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"></EditText>


</androidx.constraintlayout.widget.ConstraintLayout>